[tool.poetry]
name = "shopping-list-oop"
version = "0.1.0"
description = ""
authors = ["mahnazfallahh <mahnaz.fallah1213@gmail.com>"]
readme = "README.md"
packages = [{include = "shopping_list_oop"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
